# FabricOntologyAccelerator

./: .gitignore  README.md  example.eventhouse.ontology.yaml  example.ontology.yaml  pyproject.toml
accelerators/: README.md
accelerators/banking/: retail_customer360.eventhouse.ontology.yaml  retail_customer360.ontology.yaml
accelerators/healthcare/: patient_care360.eventhouse.ontology.yaml  patient_care360.ontology.yaml
accelerators/hospitality/: hotel_property_mgmt.eventhouse.ontology.yaml  hotel_property_mgmt.ontology.yaml
accelerators/insurance/: pandc_policy_claims.eventhouse.ontology.yaml  pandc_policy_claims.ontology.yaml
accelerators/travel/: hotel_property_mgmt.eventhouse.ontology.yaml  hotel_property_mgmt.ontology.yaml
sample_data/: customers.csv  example.ontology.xlsx  orders.csv
sample_data/banking/: accounts.csv  branches.csv  card_authorizations.csv  cards.csv  customers.csv  households.csv  interactions.csv  merchants.csv  products.csv  transactions.csv
sample_data/healthcare/: allergies.csv  conditions.csv  connected_devices.csv  device_vitals.csv  encounters.csv  medication_requests.csv  observations.csv  organizations.csv  patients.csv  practitioners.csv  procedures.csv
sample_data/hospitality/: folios.csv  guests.csv  properties.csv  rate_plans.csv  reservations.csv  room_telemetry.csv  room_types.csv  rooms.csv  stays.csv
sample_data/insurance/: adjusters.csv  claim_features.csv  claim_payments.csv  claims.csv  coverages.csv  parties.csv  policies.csv  producers.csv  risk_objects.csv  vehicle_telematics.csv
sample_data/travel/: channels.csv  folio_charges.csv  loyalty_accounts.csv
src/ontology_accelerator/: __init__.py  app.py  cli.py  definition_builder.py  excel_importer.py  fabric_api.py  fabric_discovery.py  io_utils.py  semantic_model_importer.py  suggestion_agent.py  validation.py
