[project]
name = "ontology-accelerator"
version = "0.1.0"
description = "CLI to translate ontology YAML into Microsoft Fabric ontology payloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml==6.0.3",
    "requests==2.33.1",
]

[project.scripts]
fabric-ontology-from-yaml = "ontology_accelerator.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontology_accelerator"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ontology_accelerator",
    "README.md",
    "example.ontology.yaml",
]