[project]
name = "ontology-accelerator"
version = "0.1.0"
description = "CLI to create Microsoft Fabric ontology payloads from YAML, Excel, or semantic models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openpyxl>=3.1.5",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
fabric-ontology = "ontology_accelerator.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontology_accelerator"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ontology_accelerator",
    "README.md",
    "example.ontology.yaml",
]
